Behebung eines Bugs. Der Importierer kann jetzt auch von Windows verwendet werden.